# nodriver

./: .gitignore  AGENTS.md  README.md  generate_cdp.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  static.yml
docs/nodriver/cdp/: web_mcp.rst
nodriver/cdp/: audits.py  css.py  dom.py  network.py  page.py  target.py  web_mcp.py
nodriver/core/: browser.py  connection.py  element.py  tab.py  util.py
tests/: conftest.py  test_browser_integration.py  test_browser_startup.py  test_config.py  test_imports.py
